[package]
name = "rusten-lib"
version = "0.2.0"
edition = "2021"

[env]
OUT_DIR = "./protos"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
chrono = "0.4"
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "chrono",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

[build-dependencies]
tonic-build = "0.10"
